infrastructure/config/staging/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn-staging.natetech.org
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - longhorn-staging.natetech.org
    secretName: longhorn-certificate-secret
